--- a/lab6.ipynb
+++ b/lab6.ipynb
@@ -18,7 +18,7 @@
     "    age = int(input(\"Enter your age\"))\n",
     "    \n",
     "except:\n",
-    "    print(\"You didn't input a correct integer!\")"
+    "    print(\"You didn't input an integer!\")"
    ]
   }
  ],
